# TNO-Portal

./: .dockerignore  .env.ollama.example  .gitignore  Dockerfile  Makefile  README.md  Requirements.md  docker-compose.yml  mongodb.yaml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml
app/: __init__.py  config.py  instrumentation.py  security.py  storage.py  translations.py
app/i18n/: de.json  en.json  es.json  fr.json  languages.json  pt.json  ru.json
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: access_code.html  accounts.html  admin.html  admin_users.html  alliance_users.html  base.html  create_account.html  login.html  option_maintenance.html  user_info.html  welcome.html
appdata/MongoDB/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-16a3d90a-e958-4ee1-81c7-3c92b713bcc2.wt  collection-2b4e362a-4c67-427e-b619-61f1c371bc20.wt  collection-9696a282-2441-48f0-b011-37559fa0043d.wt  collection-be94d769-d7f2-4ff6-bc80-4dd99ca983cd.wt  collection-e0ed0beb-ffe2-43f3-b8fe-4363fcc863d6.wt  index-3d431195-450e-44a2-830c-6a0b7cf0726e.wt  index-3fd8175c-169f-4681-b22a-48d3b1eb6fc7.wt  index-41c7e2a6-b77a-4e63-8b2f-13e0fb7b1ba3.wt  index-5dd0b1f4-0548-4f83-96ce-28091de47980.wt  index-b8fe3e6f-7309-49bc-83ab-17989e3e972d.wt  index-baf1c2a1-e9dd-41e0-8c00-5f44afde5f34.wt  index-dc6cfef0-eff1-46b6-98c6-533be0d27a2a.wt  index-e3c5d229-4328-47dc-bc85-bbc747770080.wt  sizeStorer.wt
scripts/: generate_translations.py
tests/: conftest.py  test_app.py  test_coverage_paths.py  test_security_redirects.py
(+4 files in other folders)
